--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
+altgraph==0.17.4
 certifi==2025.8.3
 charset-normalizer==3.4.3
 idna==3.10
+packaging==25.0
+pyinstaller==6.15.0
+pyinstaller-hooks-contrib==2025.8
 PySide6==6.9.2
 PySide6_Addons==6.9.2
 PySide6_Essentials==6.9.2
 requests==2.32.5
+setuptools==80.9.0
 shiboken6==6.9.2
 urllib3==2.5.0
